--- a/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
+++ b/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="m-3 h-100">
+<div class="mt-100 h-100">
   <!-- Start your project here-->
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
