--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div class="bodyContent">
   <!-- Start your project here-->
   <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
@@ -63,7 +63,7 @@
                     <td class="font-weight-normal">Jateng SP</td>
                     <td class="font-weight-normal">Login Succes</td>
                     <td class="font-weight-normal">
-                        <i class="fa fa-search fa-search"></i>
+                      <i class="fa fa-search fa-search"></i>
                     </td>
                   </tr>
                   <tr>
@@ -76,23 +76,23 @@
                     </td>
                   </tr>
                   <tr>
-                      <td class="font-weight-normal">24/5/2013</td>
-                      <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
-                      <td class="font-weight-normal">Jateng SP</td>
-                      <td class="font-weight-normal">Login Succes</td>
-                      <td class="font-weight-normal">
-                        <i class="fa fa-search fa-search"></i>
-                      </td>
-                    </tr>
-                    <tr>
-                        <td class="font-weight-normal">24/5/2013</td>
-                        <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
-                        <td class="font-weight-normal">Jateng SP</td>
-                        <td class="font-weight-normal">Login Succes</td>
-                        <td class="font-weight-normal">
-                          <i class="fa fa-search fa-search"></i>
-                        </td>
-                      </tr>
+                    <td class="font-weight-normal">24/5/2013</td>
+                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">Login Succes</td>
+                    <td class="font-weight-normal">
+                      <i class="fa fa-search fa-search"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="font-weight-normal">24/5/2013</td>
+                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">Login Succes</td>
+                    <td class="font-weight-normal">
+                      <i class="fa fa-search fa-search"></i>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
@@ -104,7 +104,7 @@
               <ul class="pagination pg-blue">
                 <li class="page-item">
                   <a class="page-link">
-                    <span >&laquo; Sebelumnya</span>
+                    <span>&laquo; Sebelumnya</span>
                   </a>
                 </li>
                 <li class="page-item"><a class="page-link">1</a></li>
@@ -112,7 +112,7 @@
                 <li class="page-item"><a class="page-link">3</a></li>
                 <li class="page-item">
                   <a class="page-link">
-                    <span >&raquo; Selanjutnya</span>
+                    <span>&raquo; Selanjutnya</span>
                   </a>
                 </li>
               </ul>
