--- a/src/styles.css
+++ b/src/styles.css
@@ -72,6 +72,10 @@ footer {
   margin-bottom: -4px;
 }
 
+.bodyContent {
+  margin-top: 225px;
+}
+
 /* ------------------------------------- */
 /*                  FOOTER               */
 /* ------------------------------------- */
