--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -1,7 +1,7 @@
+<!-- Header 1 / Logo / Panel / Logout -->
 <header class="navbar fixed-top justify-content-center align-items-center" style="z-index: 1039;">
 
-
-  <!-- <div class="container-fluid d-flex align-items-stretch" id="header"> -->
+  <!-- Logo -->
   <div class="container-fluid">
     <div class="row">
       <a style="z-index: 9999;" href="https://www.google.com/">
@@ -9,12 +9,12 @@
       </a>
     </div>
 
-
+    <!-- Panel -->
     <div class="col d-flex align-items-center justify-content-end">
       <div class="row panel-style">
         <ul class="col border border-light ul-style">
-          <li class="font-weight-bold text-light">Tanggal Bisnis: {{tanggal | date:'dd/MM/yyyy'}}</li>
-          <li class="font-weight-bold text-light">Last Login : {{tanggal | date:'dd/MM/yyyy hh:mm'}}</li>
+          <li class="font-weight-bold text-white">Tanggal Bisnis: {{tanggal | date:'dd/MM/yyyy'}}</li>
+          <li class="font-weight-bold text-white">Last Login : {{tanggal | date:'dd/MM/yyyy hh:mm'}}</li>
         </ul>
       </div>
       <div class="row panel-style">
@@ -25,17 +25,194 @@
       </div>
       <div class="row panel-style">
         <ul class="border border-light ul-style">
-          <li>Cabang </li>
-          <li class="font-weight-bold text-light">034 | Cabang Utama</li>
+          <li class="font-weight-bold text-white">Cabang </li>
+          <li class="font-weight-bold text-white">034 | Cabang Utama</li>
         </ul>
       </div>
-
+      <!-- Logout -->
       <ul class="ul-style">
         <button class="btn btn-danger">
           <a class="text-light" (click)="fungsi()">Sign Out</a>
         </button>
       </ul>
 
+    </div>
+  </div>
+</header>
+<!-- Header 2 / Background Header 3 -->
+<!-- <header class="navbar navbar2 fixed-top" style="margin-top: 100px; height: 120px;">
+</header> -->
+
+<!-- Header 3 / Menu Dropdown -->
+<header class="navbar navbar3 fixed-top d-flex align-items-center bg-styleNav3" style="margin-top: 100px; height: 120px;">
+  <nav class="nav d-flex justify-content-center fixed-top" style="margin-top: 100px;">
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Administrative
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Report
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        User Maintenance
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Pembayaran
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Rekening
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Kartu
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Rekening Koran
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Cash Drawer Teller
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        PassBook
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Otorisasi Head CS
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Cash Drawer
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
+    </div>
+
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle class="dropdown-toggle waves-light btn-shift" type="button" mdbWavesEffect>
+        Nasabah
+      </button>
+
+      <div class="dropdown-menu dropdown-primary">
+        <button class="dropdown-item text-dark" href="#">Action</button>
+        <button class="dropdown-item text-dark" href="#">Another action</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+        <button class="dropdown-item text-dark" href="#">Something else here</button>
+      </div>
     </div>
 
 
@@ -44,11 +221,25 @@
 
 
 
-    <!-- <div style="width: 27%">
+
+
+
+
+
+
+
+
+
+
+  </nav>
+</header>
+
+<!-- <div class="container-fluid d-flex align-items-stretch" id="header"> -->
+<!-- <div style="width: 27%">
 
     </div> -->
 
-    <!-- <div style="width: 14%">
+<!-- <div style="width: 14%">
       <div class="row text-right" style="position: absolute;top: 30px;">
         <ul style="list-style-type: none; font-size:1vw;">
           <li class="text-light">
@@ -60,16 +251,9 @@
         </ul>
       </div>
     </div> -->
-    <!-- </div> -->
-  </div>
-</header>
+<!-- </div> -->
 
-<header class="navbar navbar2 fixed-top" style="margin-top: 100px;">
-</header>
-
-<header class="navbar navbar3 fixed-top" style="margin-top: 100px;">
-  <nav class="nav d-flex justify-content-center fixed-top" style="margin-top: 15vh;">
-    <nav class="col d-flex justify-content-center" style="margin-top: 15px;">
+<!-- <nav class="col d-flex justify-content-center" style="margin-top: 15px;">
       <a class="nav-link active" [routerLink]="['/user/bob']">Administrative</a>
       <a class="nav-link active" [routerLink]="['/user/bob']">Report</a>
       <a class="nav-link active" [routerLink]="['/user/bob']">User Maintenance</a>
@@ -82,6 +266,4 @@
       <a class="nav-link active" [routerLink]="['/user/bob']">Otorisasi Head CS</a>
       <a class="nav-link active" [routerLink]="['/user/bob']">Cash Drawer</a>
       <a class="nav-link active" [routerLink]="['/user/bob']">Nasabah</a>
-    </nav>
-  </nav>
-</header>
+    </nav> -->
